# faramwok

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: lint-test.yml
faramwok/: __init__.py  app.py  doc_parser.py  request.py  response.py  route_handler.py
tests/: test_faramwok.py
